--- a/menu.css
+++ b/menu.css
@@ -1,40 +1,43 @@
 * {
-    margin: 0;
-    padding: 0;
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
   }
+body {
+    background-image: url(/home/coudert/code/exo_menu/bgimg.jpg);
+    background-size: 85em 20em;
+    background-repeat: no-repeat;
+ } 
 .img {
-    top: 50px;
-    position: absolute;
-    margin-top: 2em;
+    
+    margin-top: 4em;
     margin-left: 1em; 
 }
 h1 {
+    color: white;
     margin-left: 11em;
-    margin-top: 4em;
-    position: absolute;
+    margin-top: -3.5em;
+    
 
 }
 ul {
     
-    list-style: none;  
+    list-style: none; 
 }
-li {
-    
+a {
+    color: white;
 }
 .menu1 {
     position: absolute;
-    top: 8em;
-    left: 35em;
+    margin-top: -5em;
+    margin-left: 30em;
     border: 0.2em solid red;
     width: 12%;
 }
     .sousmenu1 {
         display: none;
         box-shadow: 0em 0.2em 0.4em black;
-        background-color: white;   
+          
     }
         .menu1:hover .sousmenu1 {
             border-bottom: 0.2em solid black;
@@ -42,15 +45,15 @@ li {
         }
 .menu2 {
     position: absolute;
-    left: 45em;
-    top: 8em;
+    margin-top: -5em;
+    margin-left: 40em;
     border: 0.2em solid red;
     width: 12%;
 }
     .sousmenu2 {
         display: none;
         box-shadow: 0em 0.2em 0.4em black;
-        background-color: white;
+        
     }
         .menu2:hover .sousmenu2 {
             border-bottom: 0.2em solid black;
@@ -58,15 +61,15 @@ li {
         }
 .menu3 {
     position: absolute;
-    left: 55em;
-    top: 8em;
+    margin-top: -5em;
+    margin-left: 50em;
     border: 0.2em solid red;
     width: 12%;
 }
     .sousmenu3 {
         display: none;
         box-shadow: 0em 0.2em 0.4em black;
-        background-color: white;
+        
     }
         .menu3:hover .sousmenu3{
             border-bottom: 0.2em solid black;
